--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
     "vite-plugin-svgr": "^4.3.0",
